adding blaze-persistence to the project and generatng queries. Updating the swagger file
